--- a/src/styles/_team.scss
+++ b/src/styles/_team.scss
@@ -1,14 +1,19 @@
 .team {
-  margin-bottom: 77px;
+  @include margin-bottom(76, 37);
 
   display: flex;
   align-items: center;
 
-  &__btn {
-    padding: 0 50px;
-    margin-left: 111px;
+  @media (max-width: 1370px) {
+    flex-direction: column;
+  }
 
-    height: 60px;
+  &__btn {
+    @include padding-right(50, 25);
+    @include padding-left(50, 25);
+    @include margin-left(110, 55);
+
+    @include height(60, 40);
 
     display: flex;
     align-items: center;
@@ -16,13 +21,17 @@
 
     background: linear-gradient(0.25turn, #2d0397, #f962a9);
     border-radius: 50px;
+
+    @media (max-width: 1370px) {
+      margin: 0 auto;
+    }
   }
 
   &__link {
     font-family: 'Rubik', sans-serif;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 14px;
+    @include font(14, 12);
     font-weight: bold;
     letter-spacing: 2px;
     color: #fff;
