--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -14,6 +14,8 @@
   box-shadow: 0 8px 16px rgba(23, 23, 163, 0.1);
 
   &__logo-container {
+    margin-right: 60px;
+  
     display: flex;
     align-items: center;
   }
@@ -28,7 +30,7 @@
   &__logo-text {
     width: 40px;
 
-    font-size: 20px;
+    @include font(20, 12);
     font-weight: 600;
     line-height: 20px;
     text-transform: uppercase;
@@ -44,18 +46,21 @@
     margin-right: 40px;
 
     font-family: 'Rubik', sans-serif;
-    font-size: 14px;
+    @include font(14, 12);
     font-weight: 500;
 
     text-decoration: none;
     text-transform: uppercase;
     color: #e5e6ed;
-
   }
 
   &__options {
     display: flex;
     align-items: center;
+
+    @media (max-width: 1471px) {
+      display: none;
+    }
   }
 
   &__dropdown {
@@ -74,7 +79,7 @@
     background-color: #fff;
   }
 
-  &__wallet-container {
+  &__wallet-btn {
     width: 200px;
     height: 60px;
 
@@ -86,12 +91,32 @@
     border-radius: 50px;
   }
 
-  &__wallet {
+  &__wallet-btn-text {
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 14px;
+    @include font(14, 12);
     font-weight: bold;
     letter-spacing: 2px;
     color: #fff;
+  }
+  
+  /*<1470 styles*/
+  &__wallet-container {
+    @media (max-width: 1470px) {
+      width: 40px;
+      height: 40px;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      background: linear-gradient(0.25turn, #2d0397, #f962a9);
+      border-radius: 50%;
+    }
+  }
+
+  &__wallet-ico {
+    width: 16px;
+    height: 16px;
   }
 }
