--- a/src/styles/_solutions.scss
+++ b/src/styles/_solutions.scss
@@ -1,32 +1,37 @@
 .solutions {
-  margin: 228px 0 550px;
+  @include margin-top(228, 114);
+  @include margin-bottom(550, 114);
 
   &__container {
-    margin-left: 794px;
+    @include margin-left(794, 396);
 
     display: flex;
     flex-direction: column;
+
+    @media (max-width: 1364px) {
+      margin: 0 auto;
+    }
   }
 
   &__subtitle {
-    margin-bottom: 20px;
+    @include margin-bottom(20, 10);
 
     font-family: 'Rubik', sans-serif;
-    font-size: 16px;
+    @include font(16, 12);
     letter-spacing: 2px;
     text-transform: uppercase;
     color: #c2b6dc;
   }
 
   &__title {
-    margin-bottom: 80px;
+    @include margin-bottom(80, 40);
 
-    width: 595px;
+    @include width(594, 296);
 
     font-family: 'Open Sans', sans-serif;
-    font-size: 50px;
+    @include font(50, 25);
     font-weight: bold;
-    line-height: 60px;
+    @include line-height(60, 30);
     color: #1f2047;
   }
 
@@ -37,45 +42,57 @@
     align-items: center;
   }
 
+  &__rectangle {
+    @include width(160, 80);
+    @include height(160, 80);
+  }
+
   &__id {
     position: absolute;
-    top: 55px;
-    left: 62px;
+    @include top(55, 22.5);
+    @include left(62, 31);
 
     font-family: 'Rubik', sans-serif;
-    font-size: 30px;
+    @include font(30, 16);
     font-weight: bold;
     color: #fff;
+
+    @media (max-width: 769px) {
+      font-weight: normal;
+    }
   }
 
   &__rectangle-mini {
+    @include width(66, 33);
+    @include height(66, 33);
+
     position: absolute;
 
     animation: 6s linear 0s infinite normal rectangle;
   }
 
   &__rectangle-mini--1 {
-    top: 40px;
-    left: -10px;
+    @include top(40, 20);
+    @include left(-10, -5);
   }
 
   &__rectangle-mini--2 {
-    top: 100px;
-    left: 47px;
+    @include top(100, 50);
+    @include left(47, 23.5);
   }
 
   &__rectangle-mini--3 {
-    top: 40px;
-    left: 102px;
+    @include top (40, 20);
+    @include left (102, 51);
   }
 
   &__text {
     margin-left: 20px;
 
-    width: 510px;
+    @include width(510, 255);
 
     font-family: 'Open Sans', sans-serif;
-    font-size: 25px;
+    @include font(24, 14);
     font-weight: bold;
     color: #7374a3;
   }
