--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
 
+@import './mixins';
 @import './app';
 @import './header';
 @import './nav';
@@ -21,5 +22,6 @@
 }
 
 .container {
-  padding: 0 120px;
+  @include padding-right(120, 15);
+  @include padding-left(120, 15);
 }
