--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -46,6 +46,13 @@
     @include margin-bottom(300, 150);
 
     @include width(726, 300);
+
+    @media (max-width: 769px) {
+      margin-right: auto;
+      margin-left: auto;
+
+      text-align: center;
+    }
   }
 
   &__title {
@@ -82,6 +89,17 @@
 
     background: linear-gradient(0.25turn, #2d0397, #f962a9);
     border-radius: 50px;
+
+    transition: text-shadow .3s, box-shadow .3s, transform .3s;
+
+    &:hover {
+      text-shadow:0 0 30px rgba(255, 255, 255, 0.6), 0 0 30px rgba(255, 255, 255, 0.5), 0 0 10px rgba(255, 255, 255, 0.7);
+      box-shadow: 0 8px 16px rgba(249, 98, 169, 0.3);
+
+      transform: scale(1.01);
+
+      cursor: pointer;
+    }
   }
 
   &__btn_white {
@@ -90,10 +108,11 @@
   }
 
   &__link {
-    @include font(14, 12);
+    @include font(14, 7);
     font-weight: bold;
     text-decoration: none;
     text-transform: uppercase;
+    text-align: center;
     letter-spacing: 2px;
     color: #fff;
   }
