--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -89,6 +89,17 @@
 
     background: linear-gradient(0.25turn, #2d0397, #f962a9);
     border-radius: 50px;
+
+    transition: text-shadow .3s, box-shadow .3s, transform .3s;
+
+    &:hover {
+      text-shadow:0 0 30px rgba(255, 255, 255, 0.6), 0 0 30px rgba(255, 255, 255, 0.5), 0 0 10px rgba(255, 255, 255, 0.7);
+      box-shadow: 0 8px 16px rgba(249, 98, 169, 0.3);
+
+      transform: scale(1.01);
+
+      cursor: pointer;
+    }
   }
 
   &__wallet-btn-text {
