--- a/src/styles/_token.scss
+++ b/src/styles/_token.scss
@@ -29,6 +29,17 @@
     background-color: #f9f1fc;
     border-radius: 50%;
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+
+    transition: text-shadow .3s, box-shadow .3s, transform .3s;
+
+    &:hover {
+      text-shadow:0 0 30px rgba(255, 255, 255, 0.6), 0 0 30px rgba(255, 255, 255, 0.5), 0 0 10px rgba(255, 255, 255, 0.7);
+      box-shadow: 0 8px 16px rgba(45, 3, 151, 0.4);
+
+      transform: scale(1.01);
+
+      cursor: pointer;
+    }
   }
 
   &__btn {
