--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -12,6 +12,10 @@
     right: 0;
 
     z-index: -1;
+
+    @media (max-width: 769px) {
+      top: -120px;
+    }
   }
 
   &__nav-container {
@@ -29,6 +33,10 @@
     box-shadow: 0 8px 16px rgba(23, 23, 163, 0.1);
 
     opacity: 0.4;
+
+    @media (max-width: 769px) {
+      display: none;
+    }
   }
 
   &__nav-second-sub-container {
@@ -39,6 +47,10 @@
     box-shadow: 0 8px 16px rgba(23, 23, 163, 0.1);
 
     opacity: 0.2;
+
+    @media (max-width: 769px) {
+      display: none;
+    }
   }
 
   &__content {
@@ -48,6 +60,7 @@
     @include width(726, 300);
 
     @media (max-width: 769px) {
+      @include margin-top(600, 230);
       margin-right: auto;
       margin-left: auto;
 
@@ -56,7 +69,7 @@
   }
 
   &__title {
-    @include margin-bottom(50, 25);
+    @include margin-bottom(50, 40);
 
     @include font(70, 40);
     font-weight: bold;
@@ -70,6 +83,10 @@
     @include font(30, 16);
     @include line-height(50, 25);
     color: #9899c5;
+
+    @media (max-width: 769px) {
+      display: none;
+    }
   }
 
   &__btns {
@@ -108,7 +125,7 @@
   }
 
   &__link {
-    @include font(14, 7);
+    @include font(14, 8);
     font-weight: bold;
     text-decoration: none;
     text-transform: uppercase;
